<resources>
    <string name="app_name">WeWin</string>
    <string name="title_task">任务</string>
    <string name="title_send">已发布</string>
    <string name="title_receive">已接收</string>
    <string name="title_message">消息</string>
    <string name="title_activity_login">Sign in</string>
    <string name="homework">作业</string>
    <string name="question">问答</string>
    <string name="prompt_phone">手机号</string>
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_confirm">验证码</string>
    <string name="prompt_get_confirm">获取验证码</string>
    <string name="phone_pre">+86</string>
    <string name="wexin_sign_in">微信登录</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_up">注册</string>
    <string name="action_return">返回</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="confirm_login">验证码登录</string>
    <string name="password_login">密码登录</string>
    <string name="to_signup">注册WeWin</string>
    <string name="error_phone_required">手机号不能为空</string>
    <string name="error_phone_style">手机号格式不正确</string>
    <string name="error_password_required">密码不能为空</string>
    <string name="error_confirm_required">验证码不能为空</string>
    <string name="error_create_user">创建用户失败</string>
    <string name="error_incorrect_password">密码输入错误</string>
    <string name="error_incorrect_confirm">验证码输入错误</string>
    <string name="send_sms_success">短信发送成功</string>
    <string name="send_reset_email_to">发送重置密码邮件至</string>
    <string name="send_confirm_email_to">发送邮箱地址验证邮件至</string>
    <string name="send_email_fail">发送邮件失败</string>
    <string name="sign_out">退出登录</string>
    <string name="user_information_modify">修改资料</string>
    <string name="user_photo_modify">头像</string>
    <string name="user_display_name_modify">昵称</string>
    <string name="modify_user_information">修改个人资料</string>
    <string name="alert_choose_from_camera">拍摄</string>
    <string name="alert_choose_from_gallery">从相册选择</string>
    <string name="alert_dialog_modify_username">修改昵称</string>
    <string name="alert_confirm">确定</string>
    <string name="alert_cancel">取消</string>
    <string name="toast_update_user_fail">更新用户信息失败</string>
    <string name="side_person">个人中心</string>
    <string name="side_contact">通讯录</string>
    <string name="side_like">我的收藏</string>
    <string name="side_set">设置</string>
    <string name="side_help">帮助与反馈</string>
    <string name="side_exit">退出</string>
    <string name="title">标题</string>
    <string name="homework_content">描述一下作业内容</string>
    <string name="deadline">截止日期</string>
    <string name="send_to">选择班级</string>
    <string name="release_success">上传成功</string>
    <string name="release_fail">上传失败</string>
    <string name="deadline_time_left">距离提交作业截止时间</string>
    <string name="deadline_passed">作业已过期！</string>
    <string name="deadline_time_left_task">距离问答截止时间</string>
    <string name="deadline_passed_task">问答已过期！</string>
    <string name="reply_submit">点击添加附件</string>
    <string name="confirm_release">确认发布</string>
    <string name="addition_info">附加信息：</string>
    <string name="price">价格</string>
    <string name="variety">分类</string>
    <string name="release">发布</string>
    <string name="content">内容</string>
    <string name="reply">回 复</string>
    <string name="modify">修 改</string>
    <string name="submit">提 交</string>
    <string name="link1">附件1链接</string>
    <string name="reply_content">回复内容</string>
    <string name="attachment">附件:</string>
    <string name="release_date">发布时间</string>
    <string name="view_count">浏览次数</string>
    <string name="user_name">User Name</string>
    <string name="help_and_feedback">帮助与反馈</string>
    <string name="release_homework_none_student_error">先去添加接收作业的学生吧！</string>
    <string name="release_homework_not_this_class_teacher">对不起，您不是这个班的老师，不能发作业！</string>
    <string name="is_not_any_class_teacher">对不起，您还不是老师，不能发作业！</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="null_class_found">没有找到班级，快去添加吧！</string>
    <string name="null_class_while_add_group">没有找到班级，先去添加班级吧！</string>
    <string name="contact_add_user">添加联系人</string>
    <string name="contact_add_user_success">添加联系人成功</string>
    <string name="alert_user_class">选择班级</string>
    <string name="alert_user_auth">选择身份</string>
    <string name="alert_user_exist_error">该班级中已包含该用户</string>
    <string name="contact_add_class">添加班级</string>
    <string name="alert_class_auth">选择您的身份：</string>
    <string name="alert_class_teacher">老师</string>
    <string name="alert_class_student">学生</string>
    <string name="add_class_success">添加班级成功</string>
    <string name="add_class_fail">添加班级失败</string>
    <string name="update_class_success">修改班级成功</string>
    <string name="update_class_fail">修改班级失败</string>
    <string name="delete_class_success">删除班级成功</string>
    <string name="delete_class_fail">删除班级失败</string>
    <string name="alert_add_class">输入班级名称</string>
    <string name="update_class">修改班级</string>
    <string name="delete_class">删除班级</string>
    <string name="alert_add_group">输入群组名称</string>
    <string name="add_group">添加群组</string>
    <string name="update_group">修改群组</string>
    <string name="add_group_success">添加群组成功</string>
    <string name="add_group_fail">添加群组失败</string>
    <string name="delete_group_success">删除群组成功</string>
    <string name="delete_group_fail">删除群组失败</string>
    <string name="reset">撤回</string>
    <string name="contact_add_group">添加群组</string>
    <string name="uploading">正在上传</string>
    <string name="alert_group_class">选择班级</string>
    <string name="alert_group_group">选择群组</string>
    <string name="contact_add_group_success">添加群组成功</string>
    <string name="delete_class_message">删除班级会清除掉所有该班级下的用户信息，以及该班级的老师发布的所有作业！</string>
    <string name="exit_class">退出班级</string>
    <string name="exit_class_message">退出班级后将不会再接收到该班级老师发布的作业信息！</string>
    <string name="network_error">当前网络环境不好，请稍后再试哦~</string>
    <string name="view">次浏览</string>
    <string name="set_reward">设置报酬</string>
    <string name="describe_task">描述一下问题</string>
    <string name="title_activity_class">ClassActivity</string>
    <string name="title_activity_group">GroupActivity</string>
</resources>