<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">

    <EditText
        android:id="@+id/alert_class_name"
        android:layout_width="match_parent"
        android:hint="@string/alert_class_name"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_medium"
        android:paddingBottom="@dimen/padding_small"
        android:textSize="@dimen/text_size_large"
        android:text="@string/alert_class_auth"/>

    <RadioGroup
        android:id="@+id/alert_class_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/alert_class_teacher"
            android:text="@string/alert_class_teacher"
            android:paddingLeft="@dimen/padding_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/alert_class_student"
            android:text="@string/alert_class_student"
            android:paddingLeft="@dimen/padding_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RadioGroup>

</LinearLayout>
