<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.activity.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:contentInsetStart="0.0dp">

    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:id="@+id/login_form"
        android:paddingLeft="@dimen/padding_medium"
        android:paddingRight="@dimen/padding_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="@dimen/padding_large"
            android:src="@drawable/ic_login_icon"
            android:layout_gravity="center_horizontal"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_small"
                android:layout_marginBottom="@dimen/padding_small"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_small"
                android:layout_marginBottom="@dimen/padding_small"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
            android:id="@+id/email_sign_in_button"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_shape_default_rounded"
            android:layout_marginTop="@dimen/padding_medium"
            app:spinning_bar_color="@android:color/white"
            app:spinning_bar_width="3dp"
            app:spinning_bar_padding="6dp"
            app:initialCornerAngle="50dp"
            app:finalCornerAngle="50dp"
            android:text="@string/action_sign_in"
            android:textStyle="bold"
            android:textColor="@android:color/white" />

        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
            android:id="@+id/email_sign_up_button"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_shape_default_rounded"
            android:layout_marginTop="@dimen/padding_medium"
            app:spinning_bar_color="@android:color/white"
            app:spinning_bar_width="3dp"
            app:spinning_bar_padding="6dp"
            app:initialCornerAngle="50dp"
            app:finalCornerAngle="50dp"
            android:text="@string/action_sign_up"
            android:textStyle="bold"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:orientation="horizontal"
            android:paddingTop="@dimen/padding_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/reset_password"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:clickable="true"
                android:text="@string/reset_password"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/to_sign_up"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:clickable="true"
                android:text="@string/to_signup"
                android:textColor="@color/colorPrimaryDark"/>

        </LinearLayout>

    </LinearLayout>

    
    <LinearLayout
        android:id="@+id/signed_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_medium"
        android:paddingRight="@dimen/padding_medium"
        android:visibility="gone">

        <ImageView
            android:id="@+id/user_photo"
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:paddingBottom="@dimen/padding_medium"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/user_modify"
                android:background="@drawable/button_user_modify"
                android:drawableLeft="@drawable/ic_user_modify"
                android:gravity="center_vertical"
                android:text="@string/user_information_modify"
                android:textSize="@dimen/text_size_mini"
                android:paddingLeft="@dimen/padding_medium"
                android:paddingRight="@dimen/padding_medium"
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/user_userid"
            android:paddingTop="@dimen/padding_medium"
            android:paddingBottom="@dimen/padding_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        
    </LinearLayout>
</LinearLayout>
