<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/reply_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:paddingLeft="@dimen/padding_medium"
    android:paddingRight="@dimen/padding_medium">

    <ImageView
        android:id="@+id/item_submitter_img_reply"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/padding_medium"
        android:src="@drawable/ic_person_img" />

    <TextView
        android:id="@+id/item_submitter_name_reply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/padding_medium"
        android:layout_marginTop="@dimen/padding_medium"
        android:layout_toRightOf="@id/item_submitter_img_reply"
        android:text="@string/user_display_name_modify"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/item_submit_time_reply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_submitter_name_reply"
        android:layout_marginLeft="@dimen/padding_medium"
        android:layout_marginTop="2dp"
        android:layout_toRightOf="@id/item_submitter_img_reply"
        android:text="@string/release_date"
        android:textColor="@color/textColorSecondary"
        android:textSize="@dimen/text_size_small" />


    <ImageView
        android:id="@+id/item_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_reply_tag"
        android:visibility="gone" />


    <TextView
        android:id="@+id/item_submit_content_reply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_submitter_img_reply"
        android:layout_marginBottom="@dimen/padding_small"
        android:layout_marginTop="@dimen/padding_small"
        android:text="@string/title"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/text_size_large" />

</RelativeLayout>
